fix: set z-index

--- a/src/routes/CustomBoard/Toolbox/toolbox.module.scss
+++ b/src/routes/CustomBoard/Toolbox/toolbox.module.scss
@@ -6,6 +6,7 @@
   position: absolute;
   top: 50%;
   left: 5%;
+  z-index: 5;
   flex-direction: column;
   padding: 10px;
   background: colors.$BG_BLOCK;
